--- a/todo
+++ b/todo
@@ -15,12 +15,16 @@
         - can instead test using unapply. super easy like woah too:
             case Seq(Func(1,2,3), Func(2,3,4), Func(5,6,7)) => true; case _ => false
 
-5. when a client page receives a post, that post must be added to the corresponding user's list of posts, specifically for user-posts focus.
+5. DONE: when a client page receives a post, that post must be added to the corresponding user's list of posts, specifically for user-posts focus.
     - solution: when focused on a user, make request for updated user info.
     - update user info opportunistically
         (fail silently on users if user info object is present)
         (will have user info object post user-posts focus if no errors)
 
 
+
 6. scala-to-javascript: make it so that the client can be represented as an akka actor using websockets,
     and communication between server and client can be written as actors. eh, listed as a long term goal on scala-js website. sounds like a phd project. would be nice, though
+
+
+7. sets: use a set for every client-side listing of post_id. find a library or build one, whatever. I NEED MAH DATA STRUCTURES
