--- a/todo
+++ b/todo
@@ -4,7 +4,7 @@ TOP ISSUE: new user, other users defaulting to followed for some reason
     -also, it's not all users, only some. TESTS NOW PLS!
     -FOLLOWING/UNFOLLOWING USER A has effects outside current user!? what? I might be wrong here.
 	-maybe current user shows as followed after loading posts including user's posts, receiving new json object for current user, overwriting intial isFollowing=false
-
+    - I THINK that the cause was bad api calls, have ensured that users cannot favorite self. Still need tests.
 
 8. specs2 test cases. focus on coverage over exhaustivity, aim for initial pass over all features as quickly as possible.
     - avoid not having test cases to point to
